--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@ body {
     padding: 48px 32px;
 }
 
-
 .main img {
     object-fit: cover;
     max-width: 350px;
+    width: auto;
+    height: auto;
 }
 
 .content {
@@ -65,6 +66,48 @@ a {
     text-decoration: none;
 }
 
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 38px;
+    padding-bottom: 128px;
+}
+
+.card {
+    font-size: 16px;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 12px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    display:flex;
+    flex-direction: column;
+    background-color: #eee;
+    align-items: center;
+    padding: 128px 20%;
+    gap: 8px;
+}
+
+.quoter {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: bold;
+    margin-left: auto;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+    border-radius: 8px;
+}
+
 button {
     font-size: 18px;
     font-weight: bold;
@@ -74,4 +117,11 @@ button {
     padding: 8px 18px;
     border: 1px solid black;
     border-radius: 8px;
+}
+
+.title {
+    font-size: 36px;
+    text-align: center;
+    padding: 32px; 
+
 }
