--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     font-family: Helvetica, sans-serif;
     margin:0;
+    font-size: 18px;
 }
 
 
@@ -11,6 +12,7 @@ body {
     align-items: center;
     justify-content: space-around;
     background-color: #eee;
+    padding: 0px 12px;
 }
 
 .header h1 {
@@ -37,7 +39,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-size: 18px; 
     width: 480px;
     gap: 8px;
 }
@@ -61,7 +62,6 @@ ul {
 }
 
 a {
-    font-size: 18px;
     color: black;
     text-decoration: none;
 }
@@ -102,6 +102,31 @@ a {
     margin-left: auto;
 }
 
+.signup {
+    color:white;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 128px 10%;
+    padding: 64px 12px;
+
+}
+
+.signup button {
+    border: 2px solid white;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    padding: 24px;
+}
+
 img {
     width: 200px;
     height: 200px;
@@ -123,5 +148,4 @@ button {
     font-size: 36px;
     text-align: center;
     padding: 32px; 
-
 }
