--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
+:root {
+    --bg-color: rgb(26, 28, 29); 
+}
+
 body {
     display: flex;
     flex-direction: column;
     font-family: Helvetica, sans-serif;
     margin:0;
     font-size: 18px;
+    color: var(--bg-color);
 }
 
 
@@ -11,8 +16,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #eee;
     padding: 0px 12px;
+	background-color: var(--bg-color);
+    color: white;
 }
 
 .header h1 {
@@ -20,7 +26,6 @@ body {
 }
 
 .main {
-    background-color: #eee;
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
@@ -62,7 +67,7 @@ ul {
 }
 
 a {
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
@@ -90,6 +95,7 @@ a {
     display:flex;
     flex-direction: column;
     background-color: #eee;
+    color: var(--bg-color);
     align-items: center;
     padding: 128px 20%;
     gap: 8px;
@@ -104,14 +110,16 @@ a {
 
 .signup {
     color:white;
-    background-color: black;
-    border: 1px solid black;
+    background-color: var(--bg-color);
+    border: 1px solid var(--bg-color);
     border-radius: 8px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     margin: 128px 10%;
-    padding: 64px 12px;
+    padding: 64px 24px;
+    gap: 12px;
+    flex-wrap: wrap;
 
 }
 
@@ -123,24 +131,26 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #eee;
     padding: 24px;
+	background-color: var(--bg-color);
+    color:white;
 }
 
-img {
+.card img {
     width: 200px;
     height: 200px;
     border-radius: 8px;
+    border: 3px solid var(--bg-color)
 }
 
 button {
     font-size: 18px;
     font-weight: bold;
-    background-color: black;
+    background-color: var(--bg-color);
     color: white;
     cursor: pointer;
     padding: 8px 18px;
-    border: 1px solid black;
+    border: 1px solid var(--bg-color);
     border-radius: 8px;
 }
 
